--- a/client/chat.html
+++ b/client/chat.html
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/bfa93e93e8.js" crossorigin="anonymous"></script>
   </head>
   <body>
+    asd
     <div class="wrapper">
       <section class="chat-area">
         <header>
